--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-plate",
-  "version": "0.6.0",
-  "private": true,
+  "version": "0.6.1",
+  "private": false,
   "description": "Plate language support for Atom.",
   "keywords": [
     "language",
